# go_app/routes/routes.go
@@ -2,6 +2,7 @@ package routes
 
 import (
 	"go_app/controllers"
+	"go_app/middleware"  // 添加 middleware 包的导入
 
 	"github.com/gin-gonic/gin"
 )
@@ -13,11 +14,13 @@ func SetupRoutes(api *gin.RouterGroup, userController *controllers.UserControlle
 
     // 需要认证的路由
     users := api.Group("/users")
+    users.Use(middleware.AuthMiddleware()) // 添加认证中间件
     {
         users.GET("", userController.ListUsers)            // 获取用户列表
         users.GET("/:id", userController.GetUser)         // 获取单个用户
         users.POST("/:id", userController.UpdateUser)     // 更新用户
         users.POST("/:id/delete", userController.DeleteUser) // 删除用户
         users.POST("/:id/email", userController.UpdateEmail) // 更新邮箱
+        users.POST("/password", userController.ChangePassword)
     }
 }
